# state-space-research

./: .gitignore  .last-research  AGENT_SCORE.md  CRON_CONFIG.md  CRON_SETUP.md  LICENSE  PROGRESS.md  QUICKSTART.md  README.md  RESEARCH_AGENT.md  RESEARCH_PLAN.md  SETUP_COMPLETE.md  analyze.py  analyze.sh  claude-research.sh  cron-auto-research.sh  cron-task.sh  evaluate.py  install-hooks.sh  lib202603111151_engineering_roadmap.rlib  lib20260311143000_refinement_calculus.rlib  lib20260311_114636_llm_navigator.rlib  lib20260311_2101_core_principles.rlib  lib20260311_2101_rust_type_system.rlib  lib20260311_2101_structured_generation.rlib  research-task.ps1  research_config.py  research_plan.json  results.tsv  run-auto.sh  run-research.ps1  run-research.sh  score  setup-task.ps1  start-research.ps1  state_space_research_2026-03-11.md  test_score.py
drafts/: 20260309_0949_ssd_memlayout.rs  20260309_1047_xgrammar.rs  20260309_1207_data_warehouse_etl.rs  20260309_1645_rust_typestate.rs  20260310_1200_hard_boundaries.rs  20260310_1200_llm_navigator_algo.rs  20260310_1227_layered_sixlayer_integration.rs  20260310_1310_tool_design.rs  20260310_1414_layered_architecture.rs  20260310_1430_layered_pattern_library.rs  20260310_1431_structured_generation.rs  20260310_1451_type_constraints.rs  20260310_1456_comparison_experiment_impl.rs  20260310_1507_formal_verification.rs  20260310_1526_deterministic_arch.rs  20260310_1526_layered_design.rs  20260310_1528_core_principles_typestate.rs  20260310_1534_layered_compiler.rs  20260310_1539_engineering_roadmap.rs  20260311_0800_comparison.rs  (+80 more)
(+125 files in other folders)
